--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" href="assets/css/master.css">
   </head>
   <body>
-    <div class="jcarrousel">
+    <div id="carrousel" class="jcarrousel">
       <ul>
         <li>
           <img src="assets/img/letter-one.jpg" alt="letterpress" id="imagenUno">
         </li>
         <li>
-          <img src="assets/img/letter-two.jpg" alt="bookbinding" id="imagenUno">
+          <img src="assets/img/letter-two.jpg" alt="bookbinding" id="imagenDos">
         </li>
         <li>
-          <img src="assets/img/letter-three.jpeg" alt="books">
+          <img src="assets/img/letter-three.jpeg" alt="books" id="imagenTres">
         </li>
       </ul>
     </div>
     <div class="botones">
-      <button type="button" name="button" id="siguiente">Siguiente</button>
       <button type="button" name="button" id="anterior">Anterior</button>
+      <button type="button" name="button" id="siguiente">Siguiente</button>
     </div>
     <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
