--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <link rel="stylesheet" href="assets/css/master.css">
   </head>
   <body>
-    <div id="carrousel" class="jcarrousel">
-      <ul>
-        <li>
-          <img src="assets/img/letter-one.jpg" alt="letterpress" id="imagenUno">
-        </li>
-        <li>
-          <img src="assets/img/letter-two.jpg" alt="bookbinding" id="imagenDos">
-        </li>
-        <li>
-          <img src="assets/img/letter-three.jpeg" alt="books" id="imagenTres">
-        </li>
-      </ul>
-    </div>
-    <div class="botones">
-      <button type="button" name="button" id="anterior">Anterior</button>
-      <button type="button" name="button" id="siguiente">Siguiente</button>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="carrousel-content">
+            <div class="carrousel-content active">
+              <img src="" alt="imagen-1">
+            </div>
+            <div class="carrousel-content">
+              <img src="" alt="imagen-2">
+            </div>
+            <div class="carrousel-content">
+              <img src="" alt="imagen-3">
+            </div>
+            <div class="carrousel-content">
+              <img src="" alt="imagen-4">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
